--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "@solana/web3.js": "^1.75.0",
+    "@types/express": "^4.17.17",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mqtt": "^4.3.7",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
