--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@solana/web3.js": "^1.75.0",
+    "@types/bs58": "^4.0.1",
     "@types/express": "^4.17.17",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -14,6 +15,6 @@
     "start:build": "yarn build && yarn start",
     "dev": "npx nodemon",
     "build": "tsc -p .",
-    "client": "ts-node ./src/client.ts"
+    "client": "ts-node ./dist/client.js"
   }
 }
