feat: transfer all balance when lower

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@solana/spl-token": "^0.3.8",
     "@solana/web3.js": "^1.75.0",
     "@types/bs58": "^4.0.1",
     "@types/express": "^4.17.17",
